RecipeBookBackend/src/main/java/com/example/RecipeBook/errors/IncompatibleTypes.java
package com.example.RecipeBook.errors;

public class IncompatibleTypes extends RuntimeException{
    public IncompatibleTypes() {
        super("Types cannot be combined");
    }
}
